Fix rounding of wells in dark mode

--- a/src/assets/styles/doc-styles.scss
+++ b/src/assets/styles/doc-styles.scss
@@ -76,7 +76,7 @@ body {
 
   & > div {
     padding: 0.5rem;
-    @apply bg-white bg-opacity-80 dark:bg-black dark:bg-opacity-70; 
+    @apply bg-white bg-opacity-80 dark:bg-black dark:bg-opacity-70 rounded-r-md; 
     @include transition-background-color;
   }
 
